WIP Added CUDA decomposition - but I think I did something wrong in the implementation, can you take a look at this? Also its need to be implemented in main.c but I am not sure how would you like to do it (I mean code style) - I didn't work w' cuda before.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(Cholesky C)
-#project(Cholesky C CXX CUDA)
+project(Cholesky C CXX CUDA)
 
 set(CMAKE_C_STANDARD 99)
 
